--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,5 +35,32 @@ jobs:
             JELLYFIN_WEB_DIR=$(Agent.TempDirectory)/jellyfin-web/dist yarn install
           failOnStderr: false
 
+      - task: CmdLine@2
+        displayName: Setup Tizen Studio
+        inputs:
+          script: | 
+            export TIZEN_HOME=$(Agent.TempDirectory)/tizen/
+            export TIZEN_CLI_INSTALLER_URL=http://download.tizen.org/sdk/Installer/tizen-studio_3.7/web-cli_Tizen_Studio_3.7_ubuntu-64.bin
+            export TIZEN_STUDIO=$TIZEN_HOME/tizen-studio
+
+            echo 'deb http://deb.debian.org/debian jessie main' >> /etc/apt/sources.list \
+              && apt-get update \
+              && apt-get -y install curl libssl1.0.0 \
+              && rm -rf /var/lib/apt/lists/*
+            
+            cd $TIZEN_HOME
+
+            INSTALLER=$(Agent.TempDirectory)/$(basename "$TIZEN_CLI_INSTALLER_URL") \
+              && curl "$TIZEN_CLI_INSTALLER_URL" > "$INSTALLER" \
+              && chmod 755 "$INSTALLER" \
+              && "$INSTALLER" --no-java-check --accept-license $TIZEN_STUDIO \
+              && rm "$INSTALLER" \
+              && cd $TIZEN_STUDIO/tools/certificate-generator/patches/partner \
+              && ./patch.sh $TIZEN_STUDIO \
+              && rm -rf \
+                $TIZEN_HOME/.package-manager \
+                $TIZEN_HOME/tizen-studio/license \
+                $TIZEN_HOME/tizen-studio/package-manager
+          failOnStderr: false
 
  
