--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,4 +63,18 @@ jobs:
                 $TIZEN_HOME/tizen-studio/package-manager
           failOnStderr: false
 
- 
+      - task: CmdLine@2
+        displayName: Setup certificates
+        inputs:
+          script: |
+            export CERTIFICATE_DIR=$(Agent.TempDirectory)/certificates
+            mkdir $CERTIFICATE_DIR
+            cat $(CERTIFICATE) | base64 --decode > $CERTIFICATE_DIR/certificate.p12
+            tizen security-profiles add -n DebugProfile -a $CERTIFICATE_DIR/certificate.p12 -p 1234
+
+      - task: CmdLine@2
+        displayName: Package build
+        inputs:
+          script: |
+            tizen build-web -e ".*" -e gulpfile.js -e README.md -e "node_modules/*" -e "jellyfin-web/*" -e "package*.json" -e "yarn.lock"
+            tizen package -t wgt -s debug -- .buildResult
