--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,7 +69,7 @@ jobs:
           script: |
             export CERTIFICATE_DIR=$(Agent.TempDirectory)/certificates
             mkdir $CERTIFICATE_DIR
-            cat $(CERTIFICATE) | base64 --decode > $CERTIFICATE_DIR/certificate.p12
+            echo $(CERTIFICATE) | base64 --decode > $CERTIFICATE_DIR/certificate.p12
             tizen security-profiles add -n DebugProfile -a $CERTIFICATE_DIR/certificate.p12 -p 1234
 
       - task: CmdLine@2
