--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,11 +42,6 @@ jobs:
             export TIZEN_HOME=$(Agent.TempDirectory)/tizen
             export TIZEN_CLI_INSTALLER_URL=http://download.tizen.org/sdk/Installer/tizen-studio_3.7/web-cli_Tizen_Studio_3.7_ubuntu-64.bin
             export TIZEN_STUDIO=$TIZEN_HOME/tizen-studio
-
-            echo 'deb http://deb.debian.org/debian jessie main' >> /etc/apt/sources.list \
-              && apt-get update \
-              && apt-get -y install curl libssl1.0.0 \
-              && rm -rf /var/lib/apt/lists/*
             
             mkdir -p $TIZEN_HOME
             cd $TIZEN_HOME
@@ -62,6 +57,8 @@ jobs:
                 $TIZEN_HOME/.package-manager \
                 $TIZEN_HOME/tizen-studio/license \
                 $TIZEN_HOME/tizen-studio/package-manager
+
+            export PATH= $TIZEN_HOME/tizen-studio/tools: $TIZEN_HOME/tizen-studio/tools/ide/bin:$PATH
           failOnStderr: false
 
       - task: CmdLine@2
