Update azure-pipelines.yml for Azure Pipelines
Jellyfin webdir should point to dist

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ jobs:
         displayName: Install Jellyfin Tizen
         inputs:
           script: | 
-            yarn install
+            JELLYFIN_WEB_DIR=$JELLYFIN_WEB_DIR/dist yarn install
           failOnStderr: false
 
       - task: CmdLine@2
