--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,8 +73,6 @@ jobs:
         inputs:
           script: |
             export PATH=$TIZEN_HOME_DIR/tizen-studio/tools:$TIZEN_HOME_DIR/tizen-studio/tools/ide/bin:$PATH
-            ls $TIZEN_HOME_DIR/tizen-studio/tools
-            ls $TIZEN_HOME_DIR/tizen-studio/tools/ide/bin
 
             mkdir -p $CERTIFICATE_DIR
             
@@ -88,3 +86,27 @@ jobs:
             export PATH=$TIZEN_HOME_DIR/tizen-studio/tools:$TIZEN_HOME_DIR/tizen-studio/tools/ide/bin:$PATH
             tizen build-web -e ".*" -e gulpfile.js -e README.md -e "node_modules/*" -e "jellyfin-web/*" -e "package*.json" -e "yarn.lock"
             tizen package -t wgt -s debug -- .buildResult
+
+      - task: CopyFiles@2
+        displayName: Staging artifacts
+        inputs:
+          SourceFolder: '.buildResult'
+          Contents: '*.wgt'
+          TargetFolder: '$(Build.ArtifactStagingDirectory)'
+          OverWrite: true
+
+      - task: PublishBuildArtifacts@1
+        displayName: Publish artifacts
+        inputs:
+          PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+          ArtifactName: 'DebugBuild'
+          publishLocation: 'Container'
+
+      - task: GitHubRelease@1
+        inputs:
+          gitHubConnection: 'github.com_robinkruyt'
+          repositoryName: '$(Build.Repository.Name)'
+          action: 'create'
+          target: '$(Build.SourceVersion)'
+          tagSource: 'gitTag'
+          addChangeLog: false
