Update azure-pipelines.yml for Azure Pipelines
Addition of Github release

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -96,10 +96,12 @@ jobs:
           OverWrite: true
 
       - task: GitHubRelease@1
+        displayName: Creating Github Release
         inputs:
           gitHubConnection: 'github.com_robinkruyt'
           repositoryName: '$(Build.Repository.Name)'
           action: 'create'
           target: '$(Build.SourceVersion)'
-          tagSource: 'gitTag'
+          tagSource: 'userSpecifiedTag'
+          tag: '$(Build.BuildNumber)'
           addChangeLog: false
