--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-dom": "^1.0.0",
-    "gulp-if": "^3.0.0"
+    "gulp-if": "^3.0.0",
+    "jellyfin-web": "https://github.com/jellyfin/jellyfin-web.git#v10.5.4"
   }
 }
